# vortex

./: .clang-format  .gitignore  .gitmodules  .history  .pixi  .swp  .yamllint.yaml  AGENTS.md  ARRAYVIEW_PLAN.md  BENCHMARK_WEBSITE_REDESIGN.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FSSTVIEW_HANDOVER.md  FSSTVIEW_NEXT_PROMPT.md  LAYOUT_PLAN.md  LAYOUT_PLAN_V2_BASELINES.md  PLAN.md  PROMPT.md  README.md  REUSE.toml  ROADMAP.md  STYLE.md  UNION_PLAN.md  _typos.toml  change.sh  clippy.toml  codecov.yml  deny.toml  df-q6-parquet.json  experiment_report.md  justfile  nextest.toml  parquet.plan  pixi.toml  plan.md  profile.json  pub-audit-notes.md  (+15 more)
bench-orchestrator/: README.md  pyproject.toml
bench-orchestrator/bench_orchestrator/: __init__.py  cli.py  config.py  utils.py
bench-orchestrator/tests/: test_cli.py  test_config.py  test_executor.py
bench-vortex/: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  REUSE.toml  build.rs  clickbench_queries.sql  statpopgen.sql
bench-vortex/benches/: bytes_at.rs  clickbench.rs  compress.rs  compress_noci.rs  compressor_throughput.rs  datafusion.rs  random_access.rs  sel_vec.rs  tokio_runtime.rs  tpch.rs  tpch_divan.rs
bench-vortex/public_bi/: fetch_schemas_and_queries.sh
bench-vortex/scripts/: cold-run.sh  diff_vortex_operators.sh  fetch_public_bi_schemas_and_queries.sh  peak-mem.sh  public_pi_run.sh
bench-vortex/src/: bench_run.rs  benchmark_driver.rs  benchmark_trait.rs  blob.rs  clickbench.rs  clickbench_benchmark.rs  conversions.rs  data_downloads.rs  display.rs  downloadable_dataset.rs  formats.rs  labels.rs  lib.rs  measurements.rs  memory.rs  metrics.rs  parquet_reader.rs  parquet_utils.rs  public_bi.rs  public_bi_data.rs  query_bench.rs  reader.rs  taxi_data.rs  tpch_benchmark.rs  unified.rs  vortex_utils.rs
bench-vortex/tpcds/: 72.sql  90.sql
bench-vortex/tpch/: q15.sql  run_duckdb.sql
bench-website/: Cargo.toml
bench-website/src/: lib.rs  main.rs  mock_data.rs
bench-website/style/: main.css
cyper-object-store/: Cargo.toml
cyper-object-store/src/: lib.rs  object_store.rs  signer.rs
cyper-object-store/tests/: integration_test.rs
docs/: Doxyfile.cpp  Makefile  README.md  builder-executor-design.md  canonical-writer-design.md  conf.py  execute-into-builder-design.md  file_format.rst  generate_changelog.py  generate_missing_polars_objects_inv.py  guide.rst  index.md  index.rst  llm.txt  make.bat  pandas.objects.inv  polars.objects.inv  pyproject.toml  quickstart.rst  references.bib  references.md  symbol-table-analysis-results.md  vtable-execution-problems.md  workshop-paper-plan.md
docs/_static/: .gitignore  example.vortex  style.css
docs/api/: index.md
docs/concepts/: arrays.md  buffers.md  compute.md  dtypes.md  encodings.md  expressions.md  exprs.md  extension-types.md  file-format.md  index.md  layouts.md  overview.md  scalar_fns.md  scalars.md  scan.md  scanning.md
docs/design/: constrained-arbitrary-arrays.md  constrained-arbitrary-todo.md  jsonpath-tree-queries.md  wasm-encodings.md
docs/developer-guide/: benchmarking.md  index.md  language-bindings.md
docs/getting-started/: cli.md  convert.md  index.md  install.md  java.md  python.rst  query.md  rust.rst
docs/guides/: index.md  python-integrations.md  rust-cookbook.md
docs/internals/: index.md  lazy-evaluation.md  session.md
docs/paper/: paper.tex  references.bib
docs/project/: bindings-evolution.md  bindings.md  changelog.md  community.md  contributing.md  fsst-like-paper-draft.md  fsst-like-paper-outline.md  fsst-like-prefilters.md  index.md  roadmap.md
docs/python/: index.md  installation.md
docs/quickstart/: python.rst  quickstart.rst  rust.rst
docs/rust/: index.md  quickstart.rst
docs/specs/: dtype-format.md  file-format.md  file_format.md  index.md  ipc-format.md  ipc_format.md  row-encoding.md  scalar-format.md  wire-format.md
docs/user-guide/: datafusion.md  duckdb.md  index.md  pandas.md  polars.md  pyarrow.md  ray.md  spark.md  vortex-python.md  work-in-progress.md
docs/user-guides/: index.md  spark.md  (+1 more)
duckdb-vortex/: .gitignore  CMakeLists.txt  Makefile  README.md  extension_config.cmake  update_proto.sh  vcpkg.json
duckdb-vortex-rs/: Cargo.toml  Makefile
fls-gpu-kernel-gen/: Cargo.toml
fuzz/: COVERAGE.md  Cargo.toml  README.md  TODO.md  build-wasmfuzz.sh  build.rs  claude.md
geo/: Cargo.toml
lockfiles/: Cargo.toml
proc-macro-traits/: Cargo.toml
proc-macros/: Cargo.toml
pyvortex/: .btrblocks.txt.swp  .sampling.txt.swp  Cargo.toml  clickbench.py  print_padding.py  pyproject.toml  script.py  script_50.py
scripts/: README-miri.md  _measurement_id.py  _v4_schema_fixture.sql  assemble-slt.py  bench-taskset.sh  benchmark_alert.py  benchmark_check.py  benchmark_monitor.py  benchmark_monitor_config.yaml  capture-file-sizes.py  cat-s3.py  cat-s3.sh  check-bench-noise.py  check-miri-coverage.py  clippy_no_default.sh  coerce-criterion-json.sh  commit-json.sh  compare-benchmark-jsons.py  compare-file-sizes.py  compare-loc.py  crate-bloat.py  crate-loc.py  cross_check_python_writer.py  duckdb-r2-prepare.sh  duckdb-r2-resolve.sh  find-unsafe-crates.sh  mark-slow-miri-tests.sh  measure-miri-runtime.sh  measurement_id_golden.json  merge-dtype-into-array.sh  migrate-benchmark-data.sh  migrate-schema.py  mine_string_filter_queries.py  miri-group-analysis.md  miri-optimization-guide.md  miri-test-groups.yaml  plot-fsst-results.py  post-ingest.py  pre-commit  pre-push  (+18 more)
vortex-arcref/: Cargo.toml
vortex-array/: Cargo.toml  README.md  build.rs  dev-docs.md
vortex-array-macros/: Cargo.toml
vortex-arrow/: Cargo.toml
vortex-arrow-hook/: Cargo.toml
vortex-avro/: Cargo.toml
vortex-avro-derive/: Cargo.toml
vortex-bench/: .gitignore  Cargo.toml  README.md  REUSE.toml  alp_compress.sql  clickbench_queries.sql  polarsignals.sql  spatialbench.sql
vortex-btrblocks/: Cargo.toml  README.md  decision-tree.gv
vortex-buffer/: COLLECT_BOOL_OPTIMIZATION.md  Cargo.toml
vortex-cli/: Cargo.toml
vortex-clickhouse/: Cargo.toml  README.md  build.rs  cbindgen.toml
(+9069 files in other folders)
