[workspace]
members = [
    "bench-vortex",
    "encodings/*",
    "fuzz",
    "vortex",
    "vortex-array",
    "vortex-btrblocks",
    "vortex-buffer",
    "vortex-datafusion",
    "vortex-dtype",
    "vortex-duckdb",
    "vortex-error",
    "vortex-expr",
    "vortex-ffi",
    "vortex-file",
    "vortex-flatbuffers",
    "vortex-io",
    "vortex-ipc",
    "vortex-jni",
    "vortex-layout",
    "vortex-mask",
    "vortex-metrics",
    "vortex-proto",
    "vortex-python",
    "vortex-scalar",
    "vortex-tui",
    "vortex-utils",
    "xtask",
]
exclude = ["duckdb-vortex/duckdb-rs", "java/testfiles", "wasm-test"]
resolver = "2"

[workspace.package]
authors = ["Vortex Authors <hello@vortex.dev>"]
categories = ["database-implementations", "data-structures", "compression"]
edition = "2024"
homepage = "https://github.com/spiraldb/vortex"
include = [
    "benches/*.rs",
    "build.rs",
    "src/**/*.rs",
    "Cargo.toml",
    "proto/**/*.proto",
    "flatbuffers/**/*.fbs",
    "README.md",
]
keywords = ["vortex"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/spiraldb/vortex"
rust-version = "1.86"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.95"
arbitrary = "1.3.2"
arcref = "0.2.0"
arrayref = "0.3.7"
arrow = { version = "55.1", default-features = false }
arrow-arith = "55.1"
arrow-array = "55.1"
arrow-buffer = "55.1"
arrow-cast = "55.1"
arrow-data = "55.1"
arrow-ord = "55.1"
arrow-schema = "55.1"
arrow-select = "55.1"
arrow-string = "55.1"
async-stream = "0.3.6"
async-trait = "0.1.88"
bindgen = "0.72.0"
bit-vec = "0.8.0"
bitvec = "1.0.1"
bytes = "1.10"
bzip2 = "0.6.0"
cbindgen = "0.29.0"
cc = "1.2"
cfg-if = "1"
chrono = "0.4.41"
clap = "4.5"
compio = { version = "0.15", features = ["io-uring"], default-features = false }
crossbeam-queue = "0.3"
crossterm = "0.28"
dashmap = "6.1.0"
datafusion = { version = "48", default-features = false }
datafusion-common = { version = "48" }
datafusion-physical-plan = { version = "48" }
dirs = "6.0.0"
divan = { package = "codspeed-divan-compat", version = "3.0" }
dyn-eq = "0.1.3"
dyn-hash = "0.2.0"
enum-iterator = "2.0.0"
erased-serde = "0.4"
fastlanes = "0.1.8"
flatbuffers = "25.2.10"
flume = "0.11"
fsst-rs = "0.5.2"
futures = { version = "0.3.31", default-features = false }
futures-util = "0.3.31"
glob = "0.3.2"
goldenfile = "1"
half = { version = "2.6", features = ["std", "num-traits"] }
hashbrown = "0.15.1"
humansize = "2.1.3"
indicatif = "0.18.0"
inventory = "0.3.20"
itertools = "0.14.0"
jiff = "0.2.0"
lending-iterator = "0.1.7"
libfuzzer-sys = "0.4"
linked_hash_set = "0.1.5"
log = { version = "0.4.21" }
memmap2 = "0.9.5"
mimalloc = "0.1.42"
moka = { version = "0.12.10", default-features = false }
multiversion = "0.8.0"
num-traits = "0.2.19"
num_enum = { version = "0.7.3", default-features = false }
object_store = "0.12.1"
once_cell = "1.21"
opentelemetry = "0.30.0"
opentelemetry-otlp = "0.30.0"
opentelemetry_sdk = "0.30.0"
parking_lot = { version = "0.12.3", features = ["nightly"] }
parquet = "55.1"
paste = "1.0.15"
pco = "0.4.4"
pin-project = "1.1.5"
pin-project-lite = "0.2.15"
primitive-types = { version = "0.13.1" }
prost = "0.13.4"
prost-build = "0.13.4"
prost-types = "0.13.4"
pyo3 = { version = "0.24.1", features = ["extension-module", "abi3-py310"] }
pyo3-log = "0.12.1"
rand = "0.9.0"
rand_distr = "0.5"
ratatui = "0.29"
rayon = "1.10.0"
regex = "1.11.0"
reqwest = { version = "0.12.0", features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "blocking",
    "rustls-tls",
], default-features = false }
roaring = "0.11.0"
rstest = "0.25"
rstest_reuse = "0.7.0"
rustc-hash = "2.1"
rustversion = "1.0"
serde = "1.0.203"
serde_json = "1.0.116"
serde_test = "1.0.176"
similar = "2.7.0"
simplelog = "0.12"
sketches-ddsketch = "0.3.0"
static_assertions = "1.1"
strum = "0.27"
tabled = { version = "0.20.0", default-features = false }
taffy = "0.8.0"
tar = "0.4"
target-lexicon = "0.13"
tempfile = "3"
thiserror = "2.0.3"
tokio = "1.45.1"
tokio-stream = "0.1.17"
# replace these with releases
tpchgen = { git = "https://github.com/clflushopt/tpchgen-rs.git", rev = "d849ff430cd52250f6891ed4d5e3adad77bb2698" }
tpchgen-arrow = { git = "https://github.com/clflushopt/tpchgen-rs.git", rev = "d849ff430cd52250f6891ed4d5e3adad77bb2698" }
tracing = { version = "0.1.41" }
tracing-chrome = "0.7.2"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.19"
url = "2.5.4"
uuid = { version = "1.17", features = ["js"] }
walkdir = "2.5.0"
wasm-bindgen-futures = "0.4.39"
witchcraft-metrics = "1.0.1"
zip = "4.0.0"

# BEGIN crates published by this project
vortex = { version = "0.1.0", path = "./vortex" }
vortex-alp = { version = "0.1.0", path = "./encodings/alp", default-features = false }
vortex-array = { version = "0.1.0", path = "./vortex-array", default-features = false }
vortex-btrblocks = { version = "0.1.0", path = "./vortex-btrblocks", default-features = false }
vortex-buffer = { version = "0.1.0", path = "./vortex-buffer", default-features = false }
vortex-bytebool = { version = "0.1.0", path = "./encodings/bytebool", default-features = false }
vortex-datafusion = { version = "0.1.0", path = "./vortex-datafusion", default-features = false }
vortex-datetime-parts = { version = "0.1.0", path = "./encodings/datetime-parts", default-features = false }
vortex-decimal-byte-parts = { version = "0.1.0", path = "encodings/decimal-byte-parts", default-features = false }
vortex-dict = { version = "0.1.0", path = "./encodings/dict", default-features = false }
vortex-dtype = { version = "0.1.0", path = "./vortex-dtype", default-features = false }
vortex-error = { version = "0.1.0", path = "./vortex-error", default-features = false }
vortex-expr = { version = "0.1.0", path = "./vortex-expr", default-features = false }
vortex-fastlanes = { version = "0.1.0", path = "./encodings/fastlanes", default-features = false }
vortex-file = { version = "0.1.0", path = "./vortex-file", default-features = false }
vortex-flatbuffers = { version = "0.1.0", path = "./vortex-flatbuffers", default-features = false }
vortex-fsst = { version = "0.1.0", path = "./encodings/fsst", default-features = false }
vortex-io = { version = "0.1.0", path = "./vortex-io", default-features = false }
vortex-ipc = { version = "0.1.0", path = "./vortex-ipc", default-features = false }
vortex-layout = { version = "0.1.0", path = "./vortex-layout", default-features = false }
vortex-mask = { version = "0.1.0", path = "./vortex-mask", default-features = false }
vortex-metrics = { version = "0.1.0", path = "./vortex-metrics", default-features = false }
vortex-pco = { version = "0.1.0", path = "./encodings/pco", default-features = false }
vortex-proto = { version = "0.1.0", path = "./vortex-proto", default-features = false }
vortex-runend = { version = "0.1.0", path = "./encodings/runend", default-features = false }
vortex-scalar = { version = "0.1.0", path = "./vortex-scalar", default-features = false }
vortex-sequence = { version = "0.1.0", path = "encodings/sequence", default-features = false }
vortex-sparse = { version = "0.1.0", path = "./encodings/sparse", default-features = false }
vortex-tui = { version = "0.1.0", path = "./vortex-tui", default-features = false }
vortex-utils = { version = "0.1.0", path = "./vortex-utils", default-features = false }
vortex-zigzag = { version = "0.1.0", path = "./encodings/zigzag", default-features = false }
vortex-zstd = { version = "0.1.0", path = "./encodings/zstd", default-features = false }
# END crates published by this project

# No version contraints for unpublished crates.
vortex-duckdb = { path = "./vortex-duckdb", default-features = false }
vortex-ffi = { path = "./vortex-ffi", default-features = false }

xshell = "0.2.6"
zigzag = "0.1.0"
zstd = { version = "0.13.3", default-features = false, features = [
    "zdict_builder",
] }

[workspace.dependencies.getrandom_v03]
features = ["wasm_js"]
package = "getrandom"
version = "0.3.1"

[workspace.lints.rust]
macro_use_extern_crate = "deny"
redundant_lifetimes = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
as_ptr_cast_mut = "deny"
borrow_as_ptr = "deny"
cargo = { level = "deny", priority = -1 }
cast_possible_truncation = "deny"
cognitive_complexity = "deny"
collection_is_never_read = "deny"
dbg_macro = "deny"
debug_assert_with_mut_call = "deny"
derive_partial_eq_without_eq = "deny"
equatable_if_let = "deny"
exit = "deny"
expect_fun_call = "deny"
expect_used = "deny"
fallible_impl_from = "deny"
get_unwrap = "deny"
host_endian_bytes = "deny"
if_then_some_else_none = "deny"
inconsistent_struct_constructor = "deny"
manual_assert = "deny"
manual_is_variant_and = "deny"
many_single_char_names = "deny"
mem_forget = "deny"
multiple_crate_versions = "allow"
or_fun_call = "deny"
panic = "deny"
# panic_in_result_fn = "deny" -- we cannot disable this for tests to use assertions
redundant_clone = "deny"
same_name_method = "deny"
tests_outside_test_module = "deny"
# todo = "deny"
# unimplemented = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
use_debug = "deny"

[profile.release]
codegen-units = 1
# Turn LTO off, as it breaks when vortex-duckdb-ext is linked.
lto = "off"

[profile.release_debug]
debug = "full"
inherits = "release"

[profile.bench]
codegen-units = 16
debug = "full"
lto = false

[profile.samply]
inherits = "release"
codegen-units = 1
debug = "full"
lto = false

[profile.bench_assert]
debug-assertions = true
inherits = "bench"
