[workspace]
members = [
    # Core crates in dependency order
    "vortex-array-macros",
    "vortex-error",
    "vortex-buffer",
    "vortex-mask",
    "vortex-utils",
    "vortex-session",
    "vortex-flatbuffers",
    "vortex-metrics",
    "vortex-io",
    "vortex-proto",
    "vortex-array",
    "vortex-row",
    "vortex-tensor",
    "vortex-json",
    "vortex-compressor",
    "vortex-btrblocks",
    "vortex-layout",
    "vortex-scan",
    "vortex-file",
    "vortex-ipc",
    "vortex",
    "vortex-bench",
    "vortex-datafusion",
    "vortex-duckdb",
    "vortex-cuda",
    "vortex-cuda/cub",
    "vortex-cuda/ffi",
    "vortex-cuda/gpu-scan-cli",
    "vortex-cuda/macros",
    "vortex-cuda/nvcomp",
    "vortex-cxx",
    "vortex-ffi",
    "fuzz",
    "vortex-jni",
    "vortex-python",
    "vortex-tui",
    "vortex-web/crate",
    "vortex-sqllogictest",
    "vortex-test/compat-gen",
    "vortex-test/e2e-cuda",
    "xtask",
    # Encodings
    "encodings/fastlanes",
    "encodings/decimal-byte-parts",
    "encodings/runend",
    "encodings/sequence",
    "encodings/alp",
    "encodings/datetime-parts",
    "encodings/fsst",
    "encodings/pco",
    "encodings/sparse",
    "encodings/zigzag",
    "encodings/zstd",
    "encodings/bytebool",
    "encodings/parquet-variant",
    # Experimental encodings
    "encodings/experimental/onpair",
    # Benchmarks
    "benchmarks/lance-bench",
    "benchmarks/compress-bench",
    "benchmarks/datafusion-bench",
    "benchmarks/duckdb-bench",
    "benchmarks/random-access-bench",
    "vortex-geo",
]
exclude = ["java/testfiles", "wasm-test"]
resolver = "2"

[workspace.package]
authors = ["Vortex Authors <hello@vortex.dev>"]
categories = ["database-implementations", "data-structures", "compression"]
edition = "2024"
homepage = "https://github.com/spiraldb/vortex"
include = [

    "build.rs",
    "src/**/*.rs",
    "Cargo.toml",
    "proto/**/*.proto",
    "flatbuffers/**/*.fbs",
    "README.md",
]
keywords = ["vortex"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/spiraldb/vortex"
rust-version = "1.91.0"
version = "0.1.0"

[workspace.dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.97"
arbitrary = "1.3.2"
arc-swap = "1.9"
arcref = "0.2.0"
arrow-arith = "58.3"
arrow-array = "58.3"
arrow-buffer = "58.3"
arrow-cast = "58.3"
arrow-data = "58.3"
arrow-ipc = "58.3"
arrow-ord = "58.3"
arrow-row = "58.3"
arrow-schema = "58.3"
arrow-select = "58.3"
arrow-string = "58.3"
async-fs = "2.2.0"
async-lock = "3.4"
async-stream = "0.3.6"
async-trait = "0.1.89"
base16ct = "1.0.0"
bigdecimal = "0.4.8"
bindgen = "0.72.0"
bit-vec = "0.9.0"
bitvec = "1.0.1"
bytes = "1.11.1"
bzip2 = "0.6.0"
cargo_metadata = "0.23.1"
cbindgen = "0.29.0"
cc = "1.2"
cfg-if = "1.0.1"
chrono = "0.4.44"
clap = "4.5"
criterion = "0.8"
crossterm = "0.29"
cudarc = { version = "0.19.0", features = [
    # The NSight Compute version available on lambda.ai hosts does not inject a symbol for
    # several functions that cudarc expects to load when this is set to "cuda-12080". We
    # don't use any CUDA 12.8 specific features currently so this is fine.
    "cuda-12050",
] }
custom-labels = "0.4.4"
dashmap = "6.1.0"
datafusion = { version = "54", default-features = false, features = ["sql"] }
datafusion-catalog = { version = "54" }
datafusion-common = { version = "54" }
datafusion-common-runtime = { version = "54" }
datafusion-datasource = { version = "54", default-features = false }
datafusion-execution = { version = "54" }
datafusion-expr = { version = "54" }
datafusion-functions = { version = "54" }
datafusion-physical-expr = { version = "54" }
datafusion-physical-expr-adapter = { version = "54" }
datafusion-physical-expr-common = { version = "54" }
datafusion-physical-plan = { version = "54" }
datafusion-pruning = { version = "54" }
datafusion-sqllogictest = { version = "54" }
dirs = "6.0.0"
divan = { package = "codspeed-divan-compat", version = "4.0.4" }
enum-iterator = "2.0.0"
env_logger = "0.11"
fastlanes = "0.5.1"
flatbuffers = "25.2.10"
fsst-rs = "0.5.11"
futures = { version = "0.3.31", default-features = false }
fuzzy-matcher = "0.3"
geo-traits = "0.3.0"
geo-types = "0.7.19"
geoarrow = "0.8.0"
get_dir = "0.5.0"
glob = "0.3.2"
goldenfile = "1"
half = { version = "2.7.1", features = ["std", "num-traits"] }
hashbrown = "0.17.1"
humansize = "2.1.3"
indicatif = "0.18.0"
insta = "1.43"
inventory = "0.3.20"
itertools = "0.14.0"
jetscii = "0.5.3"
jiff = "0.2.0"
jni = { version = "0.22.0" }
kanal = "0.1.1"
lasso = { version = "0.7", features = ["multi-threaded"] }
lending-iterator = "0.1.7"
libfuzzer-sys = "0.4"
libloading = "0.8"
liblzma = "0.4"
log = { version = "0.4.21" }
loom = { version = "0.7", features = ["checkpoint"] }
memchr = "2.8.0"
memmap2 = "0.9.5"
mimalloc = "0.1.42"
moka = { version = "0.12.10", default-features = false }
multiversion = "0.8.0"
noodles-bgzf = "0.47.0"
noodles-vcf = { version = "0.88.0", features = ["async"] }
num-traits = "0.2.19"
num_enum = { version = "0.7.3", default-features = false }
object_store = { version = "0.13.2", default-features = false }
once_cell = "1.21"
oneshot = { version = "0.2.0", features = ["async"] }
onpair = { version = "0.0.4" }
opentelemetry = "0.32.0"
opentelemetry-otlp = "0.32.0"
opentelemetry_sdk = "0.32.0"
parking_lot = { version = "0.12.3", features = ["nightly"] }
parquet = "58.3"
parquet-variant = "58.3"
parquet-variant-compute = "58.3"
paste = "1.0.15"
pco = "1.0.1"
pin-project-lite = "0.2.15"
primitive-types = { version = "0.14.0" }
proc-macro2 = "1.0.95"
prost = "0.14"
prost-build = "0.14"
prost-types = "0.14"
pyo3 = { version = "0.28.0" }
pyo3-bytes = "0.6"
pyo3-log = "0.13.0"
pyo3-object_store = "0.9.0"
quote = "1.0.44"
rand = "0.10.1"
rand_distr = "0.6"
ratatui = { version = "0.30", default-features = false }
regex = "1.11.0"
regex-automata = "0.4"
reqwest = { version = "0.13.0", features = [
    "blocking",
    "charset",
    "http2",
    "rustls",
    "system-proxy",
], default-features = false }
roaring = "0.11.0"
rstest = "0.26.1"
rstest_reuse = "0.7.0"
rustc-hash = "2.1.1"
serde = "1.0.220"
serde_json = "1.0.138"
serde_test = "1.0.176"
sha2 = "0.11.0"
simdutf8 = "0.1.5"
similar = "3.0.0"
sketches-ddsketch = "0.4.0"
smallvec = "1.15.1"
smol = "2.0.2"
static_assertions = "1.1"
strum = "0.28"
syn = { version = "2.0.117", features = ["full"] }
sysinfo = "0.38.0"
tabled = { version = "0.21.0", default-features = false }
taffy = "0.10.0"
take_mut = "0.2.2"
tar = "0.4"
target-lexicon = "0.13"
temp-env = "0.3"
tempfile = "3"
termtree = { version = "1.0" }
test-with = "0.16"
thiserror = "2.0.3"
tokio = { version = "1.52" }
tokio-stream = "0.1.17"
tokio-util = "0.7.17"
vortex-array-macros = { version = "0.1.0", path = "./vortex-array-macros" }
# Pull these into non-public crates to support DF 58
tpchgen = { version = "2.0.2", git = "https://github.com/clflushopt/tpchgen-rs.git", rev = "438e9c2dbc25b2fff82c0efc08b3f13b5707874f" }
tpchgen-arrow = { version = "2.0.2", git = "https://github.com/clflushopt/tpchgen-rs.git", rev = "438e9c2dbc25b2fff82c0efc08b3f13b5707874f" }
tracing = { version = "0.1.41", default-features = false }
tracing-perfetto = "0.1.5"
tracing-subscriber = "0.3"
url = "2.5.7"
uuid = { version = "1.23", features = ["js"] }
wasm-bindgen-futures = "0.4.54"
wkb = "0.9.2"
xshell = "0.2.6"
zigzag = "0.1.0"
zip = "8.0.0"
zstd = { version = "0.13.3", default-features = false, features = [
    "zdict_builder",
] }

# BEGIN crates published by this project
vortex = { version = "0.1.0", path = "./vortex" }
vortex-alp = { version = "0.1.0", path = "./encodings/alp", default-features = false }
vortex-array = { version = "0.1.0", path = "./vortex-array", default-features = false }
vortex-btrblocks = { version = "0.1.0", path = "./vortex-btrblocks", default-features = false }
vortex-buffer = { version = "0.1.0", path = "./vortex-buffer", default-features = false }
vortex-bytebool = { version = "0.1.0", path = "./encodings/bytebool", default-features = false }
vortex-compressor = { version = "0.1.0", path = "./vortex-compressor", default-features = false }
vortex-datafusion = { version = "0.1.0", path = "./vortex-datafusion", default-features = false }
vortex-datetime-parts = { version = "0.1.0", path = "./encodings/datetime-parts", default-features = false }
vortex-decimal-byte-parts = { version = "0.1.0", path = "encodings/decimal-byte-parts", default-features = false }
vortex-error = { version = "0.1.0", path = "./vortex-error", default-features = false }
vortex-fastlanes = { version = "0.1.0", path = "./encodings/fastlanes", default-features = false }
vortex-file = { version = "0.1.0", path = "./vortex-file", default-features = false }
vortex-flatbuffers = { version = "0.1.0", path = "./vortex-flatbuffers", default-features = false }
vortex-fsst = { version = "0.1.0", path = "./encodings/fsst", default-features = false }
vortex-geo = { version = "0.1.0", path = "./vortex-geo", default-features = false }
vortex-io = { version = "0.1.0", path = "./vortex-io", default-features = false }
vortex-ipc = { version = "0.1.0", path = "./vortex-ipc", default-features = false }
vortex-json = { version = "0.1.0", path = "./vortex-json", default-features = false }
vortex-layout = { version = "0.1.0", path = "./vortex-layout", default-features = false }
vortex-mask = { version = "0.1.0", path = "./vortex-mask", default-features = false }
vortex-metrics = { version = "0.1.0", path = "./vortex-metrics", default-features = false }
vortex-onpair = { version = "0.1.0", path = "./encodings/experimental/onpair", default-features = false }
vortex-parquet-variant = { version = "0.1.0", path = "./encodings/parquet-variant" }
vortex-pco = { version = "0.1.0", path = "./encodings/pco", default-features = false }
vortex-proto = { version = "0.1.0", path = "./vortex-proto", default-features = false }
vortex-row = { version = "0.1.0", path = "./vortex-row", default-features = false }
vortex-runend = { version = "0.1.0", path = "./encodings/runend", default-features = false }
vortex-scan = { version = "0.1.0", path = "./vortex-scan", default-features = false }
vortex-sequence = { version = "0.1.0", path = "encodings/sequence", default-features = false }
vortex-session = { version = "0.1.0", path = "./vortex-session", default-features = false }
vortex-sparse = { version = "0.1.0", path = "./encodings/sparse", default-features = false }
vortex-tensor = { version = "0.1.0", path = "./vortex-tensor", default-features = false }
vortex-utils = { version = "0.1.0", path = "./vortex-utils", default-features = false }
vortex-zigzag = { version = "0.1.0", path = "./encodings/zigzag", default-features = false }
vortex-zstd = { version = "0.1.0", path = "./encodings/zstd", default-features = false }
# END crates published by this project

# No version constraints for unpublished crates.
vortex-bench = { path = "./vortex-bench", default-features = false }
vortex-compat = { path = "./vortex-test/compat-gen" }
vortex-cuda = { path = "./vortex-cuda", default-features = false }
vortex-cuda-macros = { path = "./vortex-cuda/macros" }
vortex-duckdb = { path = "./vortex-duckdb", default-features = false }
vortex-test-e2e-cuda = { path = "./vortex-test/e2e-cuda", default-features = false }
vortex-tui = { path = "./vortex-tui" }

[workspace.lints.rust]
let_underscore_drop = "deny"
macro_use_extern_crate = "deny"
redundant_lifetimes = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
unexpected_cfgs = { level = "deny", check-cfg = [
    "cfg(codspeed)",
    'cfg(target_os, values("unknown"))',
] }
warnings = "warn"

[workspace.lints.clippy]
absolute_paths = "deny"
all = { level = "deny", priority = -1 }
as_ptr_cast_mut = "deny"
borrow_as_ptr = "deny"
cargo = { level = "deny", priority = -1 }
cast_possible_truncation = "deny"
cognitive_complexity = "deny"
collection_is_never_read = "deny"
dbg_macro = "deny"
debug_assert_with_mut_call = "deny"
derive_partial_eq_without_eq = "deny"
equatable_if_let = "deny"
exit = "deny"
expect_fun_call = "deny"
expect_used = "deny"
fallible_impl_from = "deny"
get_unwrap = "deny"
host_endian_bytes = "deny"
if_then_some_else_none = "deny"
inconsistent_struct_constructor = "deny"
manual_assert = "deny"
manual_is_variant_and = "deny"
many_single_char_names = "deny"
mem_forget = "deny"
multiple_crate_versions = "allow"
needless_range_loop = "allow"
or_fun_call = "deny"
ref_option = "deny"
ref_option_ref = "deny"
panic = "deny"
# panic_in_result_fn = "deny" -- we cannot disable this for tests to use assertions
clone_on_ref_ptr = "deny"
redundant_clone = "deny"
redundant_static_lifetimes = "deny"
ref_binding_to_reference = "deny"
ref_patterns = "deny"
repeat_vec_with_capacity = "deny"
reserve_after_initialization = "deny"
same_name_method = "deny"
tests_outside_test_module = "deny"
# todo = "deny"
# unimplemented = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
use_debug = "deny"

[profile.release]
codegen-units = 1
# Our general performance should not be dependent on LTO since crates that use
# Vortex may choose not to have LTO.
lto = "off"

[profile.release_debug]
debug = "full"
inherits = "release"

[profile.bench]
codegen-units = 16
debug = "full"
lto = false

[profile.samply]
inherits = "release"
codegen-units = 1
debug = "full"
lto = false

[profile.bench_assert]
debug-assertions = true
inherits = "bench"

[profile.ci]
inherits = "dev"
debug = "line-tables-only"
incremental = false

# This rule only applies to dependencies that are not members of the workspace.
[profile.ci.package."*"]
debug = false
debug-assertions = true
incremental = false

# This improved build times significantly for default common cases that we use locally
[profile.dev.package.vortex-fastlanes]
debug = false
