[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Nicholas Gates", email = "nick@nickgates.com" }]
requires-python = ">= 3.10"
dependencies = ["vortex-array", "docs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dummy"] # Required for workspace project

[tool.uv]
managed = true
required-version = ">=0.6.0"
# Currently, all dev dependencies live in the root since uv doesn't have transitive dev dependencies.
#  See: https://github.com/astral-sh/uv/issues/7541
dev-dependencies = [
    "duckdb>=1.1.2",
    "ipython>=8.26.0",
    "maturin>=1.7.2",
    "pandas[output-formatting]>=2.2.3",
    "pip>=23.3.2",
    "polars>=1.9.0",
    "pyright>=1.1.385",
    "pytest-benchmark>=4.0.0",
    "pytest>=7.4.0",
    "ruff>=0.7.1",
]

[tool.uv.workspace]
members = ["pyvortex", "docs"]

[tool.uv.sources]
vortex-array = { workspace = true }
docs = { workspace = true }

[tool.ruff]
line-length = 120
extend-exclude = [".venv", "duckdb-vortex/**"]

[tool.ruff.lint]
select = ["F", "E", "W", "UP", "I"]
# Do not auto-fix unused variables. This is really annoying when IntelliJ runs autofix while editing.
unfixable = ["F841"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
xfail_strict = true
