# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: Copyright the Vortex contributors

[project]
name = "bench-orchestrator"
version = "0.1.0"
description = "Benchmark orchestration tool for Vortex"
requires-python = ">=3.11"
classifiers = ["Private :: Do Not Upload"]

dependencies = ["pandas>=2", "rich>=14", "typer>=0.20"]

[project.scripts]
vx-bench = "bench_orchestrator.cli:app"

[tool.uv]
managed = true

[tool.uv.sources]
vortex-data = { workspace = true }

[dependency-groups]
dev = ["pandas-stubs>=2.3.3.251201"]
